<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="mpv_activity">mpv</string>
    <string name="label_share_intent">Play in mpv</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_save">Save</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_prev">Prev</string>
    <string name="dialog_next">Next</string>
    <string name="dialog_reset">Reset</string>
    <string name="track_audio">Audio</string>
    <string name="track_subs">Subs</string>
    <string name="track_off">Off</string>
    <string name="track_primary">Primary</string>
    <string name="track_secondary">Secondary</string>
    <string name="btn_play">Play</string>
    <string name="btn_pause">Pause</string>
    <string name="btn_plus" translatable="false">+</string>
    <string name="btn_minus" translatable="false">-</string>
    <string name="ui_volume">Volume: %d%%</string>
    <string name="ui_brightness">Brightness: %d%%</string>
    <string name="ui_seek_distance">%1$s\n[%2$s]</string>
    <string name="ui_fps">%.3f FPS</string>
    <string name="ui_speed">%.2fx</string>
    <string name="ui_chapter_fallback">Chapter %1$d (%2$s)</string>
    <string name="ui_chapter">%1$s (%2$s)</string>
    <string name="ui_track">#%d</string>
    <string name="ui_track_text">#%1$d: %2$s</string>
    <string name="ui_track_title_lang">#%1$d: %2$s (%3$s)</string>
    <string name="format_fixed_number" translatable="false">%.0f</string>
    <string name="format_seconds">%.1f s</string>
    <string name="title_speed_dialog">Playback speed</string>
    <string name="error_no_file">No file given, exiting</string>
    <string name="notice_file_appended">File(s) appended to playlist</string>
    <string name="notice_file_play">Starting playback of file(s)</string>
    <string name="exit_warning_playlist">%d playlist items remaining.\nDo you really want to exit?</string>
    <string name="contrast">Contrast</string>
    <string name="video_brightness">Video brightness</string>
    <string name="gamma">Gamma</string>
    <string name="saturation">Saturation</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="audio_delay">Audio delay</string>
    <string name="sub_delay">Subtitle delay</string>
    <string name="notice_show_all_files">Showing all files</string>
    <string name="notice_show_media_files">Showing media files only</string>
    <string name="option_remember_choice">Remember choice on next startup</string>
    <string name="uri_invalid_protocol">Invalid protocol</string>
    <string name="switch_orientation">Switch orientation</string>
    <string name="open_external_audio">Open external audio…</string>
    <string name="open_external_sub">Open external subtitle…</string>
    <string name="advanced_menu">Advanced…</string>
    <string name="resume_bg_playback">Play in background</string>
    <string name="toggle_stats">Toggle stats</string>
    <string name="chapter_button">Chapter</string>
    <string name="sub_seek_button">Seek by subtitle</string>
    <string name="file_picker_old">File picker\n(legacy)</string>
    <string name="action_settings">Settings</string>
    <string name="action_playlist">Playlist</string>
    <string name="action_open_url">Open URL</string>
    <string name="action_open_doc">Open document</string>
    <string name="action_open_doc_tree">Open document tree</string>
    <string name="action_pick_file">Pick file</string>
    <string name="action_pick_file_old">Pick file (legacy)</string>
    <string name="action_external_storage">External storage</string>
    <string name="action_toggle_filter">Toggle filter</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_general_summary"></string>
    <string name="pref_header_video">Video</string>
    <string name="pref_header_video_summary"></string>
    <string name="pref_header_ui">User interface</string>
    <string name="pref_header_ui_summary"></string>
    <string name="pref_header_gestures">Touch gestures</string>
    <string name="pref_header_gestures_summary"></string>
    <string name="pref_header_developer">Developer</string>
    <string name="pref_header_developer_summary"></string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="pref_header_advanced_summary"></string>
    <string name="pref_header_about_mpv">About mpv</string>
    <string name="pref_header_about_mpv_summary"></string>
    <string name="pref_header_medialib">Media library</string>
    <string name="pref_header_medialib_summary">View mode, folders, index &amp; cache</string>
    <string name="pref_ml_grid">Grid layout</string>
    <string name="pref_ml_viewmode">Default view mode</string>
    <string name="pref_ml_rebuild_index">Rebuild search index</string>
    <string name="pref_ml_rebuild_index_summary">Re-index folders on next search</string>
    <string name="pref_ml_clear_trees">Forget added folders</string>
    <string name="pref_ml_clear_trees_summary">Remove all USB/SAF folders from search</string>
    <string name="pref_ml_clear_thumbs">Clear thumbnail cache</string>
    <string name="pref_ml_rtl_title">Right-to-left layout</string>
    <string name="pref_ml_rtl_summary">Mirror the library layout for right-to-left reading</string>
    <string name="pref_header_subtitle">Subtitles (appearance)</string>
    <string name="pref_header_subtitle_summary">Size, bold, background, encoding</string>
    <string name="pref_sub_font_size">Subtitle size</string>
    <string name="pref_sub_bold">Bold subtitles</string>
    <string name="pref_sub_background">Subtitle background box</string>
    <string name="pref_sub_embedded_styles">Apply embedded styles</string>
    <string name="pref_sub_embedded_styles_summary">Off: force the size/bold set above</string>
    <string name="pref_sub_codepage">Subtitle text encoding</string>
    <string name="pref_header_player">Player</string>
    <string name="pref_header_player_summary">Default speed, volume boost, aspect</string>
    <string name="pref_player_speed">Default playback speed</string>
    <string name="pref_player_volume_boost">Allow volume boost (200%)</string>
    <string name="pref_player_video_zoom">Default aspect / zoom</string>
    <string name="pref_player_autoplay">Auto-play next</string>
    <string name="pref_player_autoplay_summary">Play next video in folder when one finishes</string>
    <string name="pref_default_file_manager_path_title">File picker start path</string>
    <string name="pref_default_file_manager_path_summary" translatable="false">%s</string>
    <string name="pref_material_you_theming_title">Material You</string>
    <string name="pref_material_you_theming_summary">Use dynamic colors</string>
    <string name="pref_default_audio_language_title">Default audio language</string>
    <string name="pref_default_audio_language_message">Audio language(s) to be selected by default when playing a video with multiple audio streams.\nTwo- or three-letter languages codes work. Multiple values can be delimited by comma.</string>
    <string name="pref_default_audio_language_summary" translatable="false">%s</string>
    <string name="pref_default_subtitle_language_title">Default subtitle language</string>
    <string name="pref_hardware_decoding_title">Hardware decoding</string>
    <string name="pref_hardware_decoding_summary">Attempt hardware decoding before falling back to software. This is generally more efficient.</string>
    <string name="pref_background_play_title">Background playback</string>
    <string name="pref_background_play_summary">Decide when playback should be automatically resumed background.</string>
    <string name="pref_background_play_default" translatable="false">never</string>
    <string name="pref_save_position_title">Save position on quit</string>
    <string name="pref_save_position_summary">Remember current playback position on exit. When the same file is played again mpv will seek to the previous position.</string>
    <string name="pref_new_intent_replace_title">Play new files immediately</string>
    <string name="pref_new_intent_replace_summary">When opening new files while mpv is in background, replace the current playlist instead of adding at end.</string>
    <string name="pref_auto_rotation_title">Screen orientation</string>
    <string name="pref_auto_rotation_summary">Decide which orientation mpv will play landscape or portrait videos in.</string>
    <string name="pref_auto_rotation_default" translatable="false">auto</string>
    <string name="pref_display_media_title_title">Display media title (videos)</string>
    <string name="pref_display_media_title_summary">Display the title or filename of videos above the controls. Audio files will always display their metadata.</string>
    <string name="pref_bottom_controls_title">Show controls at bottom of screen</string>
    <string name="pref_no_ui_pause_title">Continue playback during UI popups</string>
    <string name="pref_no_ui_pause_summary">Continue playback while popups are open. (e.g. during the playlist dialog)</string>
    <string name="pref_no_ui_pause_default" translatable="false">audio-only</string>
    <string name="pref_playlist_exit_warning_title">Playlist exit confirmation</string>
    <string name="pref_playlist_exit_warning_summary">Show a confirmation dialog before exiting when a playlist is loaded.</string>
    <string name="pref_video_upscale_title">Upscaling filter</string>
    <string name="pref_video_downscale_title">Downscaling filter</string>
    <string name="pref_video_debanding_title">Debanding</string>
    <string name="pref_video_debanding_summary">Select video debanding mode.</string>
    <string name="pref_video_interpolation_title">Interpolation</string>
    <string name="pref_video_interpolation_message">Reduce judder caused by mismatched video FPS and display refresh rate.</string>
    <string name="pref_video_tscale_title">Temporal interpolation filter</string>
    <string name="pref_video_tscale_summary">Select the filter used for interpolating the temporal axis (frames).</string>
    <string name="pref_video_fastdecode_title">Low-quality video decoding</string>
    <string name="pref_video_fastdecode_summary">Trades quality for performance and thus fluent playback.\n<b>REDUCES QUALITY A LOT</b></string>
    <string name="qs_favorites">Favorites</string>
    <string name="lbl_menu">Menu</string>
    <string name="lbl_no_videos">No videos.\nCheck that storage permission is granted.</string>
    <string name="lbl_open_network_stream">Open network stream</string>
    <string name="lbl_open_folder">Open folder (USB/Internal)</string>
    <string name="lbl_recent">Recently played</string>
    <string name="lbl_cover">Cover</string>
    <string name="lbl_play_from_start">Play from start</string>
    <string name="lbl_resume">Resume</string>
    <string name="rating_1">1 star</string>
    <string name="rating_2">2 stars</string>
    <string name="rating_3">3 stars</string>
    <string name="rating_4">4 stars</string>
    <string name="rating_5">5 stars</string>
    <string name="pref_aurora_category">Dynamic background</string>
    <string name="pref_aurora_enabled_title">Aurora background</string>
    <string name="pref_aurora_enabled_summary">Animated color ambient background</string>
    <string name="pref_aurora_preset_title">Effect</string>
    <string name="pref_aurora_speed_title">Speed</string>
    <string name="pref_aurora_speed_summary">Animation speed (%, 100 = default)</string>
    <string name="pref_aurora_pulse_depth_title">Black pulse depth</string>
    <string name="pref_aurora_pulse_depth_summary">How dark the breathing dips (%)</string>
</resources>