<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:defaultValue="/sdcard"
        android:key="default_file_manager_path"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        android:hint=""
        android:title="@string/pref_default_file_manager_path_title" />

    <is.xyz.mpv.preferences.DropdownListPreference
        android:defaultValue="ja,jpn"
        android:key="default_audio_language"
        app:iconSpaceReserved="false"
        android:entries="@array/audio_language_pref_entries"
        android:entryValues="@array/audio_language_pref_values"
        android:title="@string/pref_default_audio_language_title" />

    <is.xyz.mpv.preferences.DropdownListPreference
        android:defaultValue="ko,kor"
        app:iconSpaceReserved="false"
        android:key="default_subtitle_language"
        android:entries="@array/subtitle_language_pref_entries"
        android:entryValues="@array/subtitle_language_pref_values"
        android:title="@string/pref_default_subtitle_language_title" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="material_you_theming"
        android:summary="@string/pref_material_you_theming_summary"
        android:title="@string/pref_material_you_theming_title"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        app:iconSpaceReserved="false"
        android:key="hardware_decoding"
        android:summary="@string/pref_hardware_decoding_summary"
        android:title="@string/pref_hardware_decoding_title" />

    <is.xyz.mpv.preferences.SegmentListPreference
        android:defaultValue="@string/pref_background_play_default"
        app:iconSpaceReserved="false"
        android:key="background_play"
        android:summary="@string/pref_background_play_summary"
        android:entries="@array/background_play_entries"
        android:entryValues="@array/background_play_values"
        android:title="@string/pref_background_play_title" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        app:iconSpaceReserved="false"
        android:key="save_position"
        android:summary="@string/pref_save_position_summary"
        android:title="@string/pref_save_position_title" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        app:iconSpaceReserved="false"
        android:key="new_intent_replace"
        android:summary="@string/pref_new_intent_replace_summary"
        android:title="@string/pref_new_intent_replace_title" />

</PreferenceScreen>
