<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="@string/pref_auto_rotation_default"
        app:iconSpaceReserved="false"
        android:key="auto_rotation"
        android:summary="@string/pref_auto_rotation_summary"
        android:entries="@array/auto_rotation_entries"
        android:entryValues="@array/auto_rotation_values"
        android:title="@string/pref_auto_rotation_title" />

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        android:defaultValue="false"
        android:key="display_media_title"
        android:summary="@string/pref_display_media_title_summary"
        android:title="@string/pref_display_media_title_title" />

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        android:defaultValue="true"
        android:key="bottom_controls"
        android:summary=""
        android:title="@string/pref_bottom_controls_title" />

    <ListPreference
        android:defaultValue="@string/pref_no_ui_pause_default"
        app:iconSpaceReserved="false"
        android:key="no_ui_pause"
        android:summary="@string/pref_no_ui_pause_summary"
        android:entries="@array/background_play_entries"
        android:entryValues="@array/background_play_values"
        android:title="@string/pref_no_ui_pause_title" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        app:iconSpaceReserved="false"
        android:key="playlist_exit_warning"
        android:summary="@string/pref_playlist_exit_warning_summary"
        android:title="@string/pref_playlist_exit_warning_title" />

    <!-- B-57 v3: 동적 오로라 배경. entries 는 AuroraPresets(SSOT)에서 코드 주입(UIPreference). -->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/pref_aurora_category">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="aurora_enabled"
            android:title="@string/pref_aurora_enabled_title"
            android:summary="@string/pref_aurora_enabled_summary" />

        <ListPreference
            app:iconSpaceReserved="false"
            android:key="aurora_preset"
            android:defaultValue="mesh_soft"
            android:dependency="aurora_enabled"
            android:title="@string/pref_aurora_preset_title" />

        <SeekBarPreference
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true"
            android:key="aurora_speed"
            android:defaultValue="100"
            android:max="400"
            android:dependency="aurora_enabled"
            android:title="@string/pref_aurora_speed_title"
            android:summary="@string/pref_aurora_speed_summary" />

        <SeekBarPreference
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true"
            android:key="aurora_pulse_depth"
            android:defaultValue="50"
            android:max="100"
            android:dependency="aurora_enabled"
            android:title="@string/pref_aurora_pulse_depth_title"
            android:summary="@string/pref_aurora_pulse_depth_summary" />

        <SeekBarPreference
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true"
            android:key="aurora_sat"
            android:defaultValue="75"
            android:max="100"
            android:dependency="aurora_enabled"
            android:title="채도"
            android:summary="색의 진하기 (0=흑백, 100=원색)" />

        <SeekBarPreference
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true"
            android:key="aurora_value"
            android:defaultValue="90"
            android:max="100"
            android:dependency="aurora_enabled"
            android:title="명도"
            android:summary="밝기 (낮을수록 어둡게)" />

        <SeekBarPreference
            app:iconSpaceReserved="false"
            app:showSeekBarValue="true"
            android:key="aurora_glow"
            android:defaultValue="38"
            android:max="100"
            android:dependency="aurora_enabled"
            android:title="글로우 세기"
            android:summary="배경 빛의 불투명도 (낮을수록 은은)" />

    </PreferenceCategory>

</PreferenceScreen>
