<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 22: 화질 필터를 인라인 프리셋(드롭다운/세그먼트)으로. 팝업 다이얼로그 제거. -->

    <is.xyz.mpv.preferences.DropdownListPreference
        android:key="video_scale"
        android:title="@string/pref_video_upscale_title"
        app:iconSpaceReserved="false"
        android:defaultValue=""
        android:entries="@array/video_upscale_pref_entries"
        android:entryValues="@array/video_upscale_pref_values" />

    <is.xyz.mpv.preferences.DropdownListPreference
        android:key="video_downscale"
        android:title="@string/pref_video_downscale_title"
        app:iconSpaceReserved="false"
        android:defaultValue=""
        android:entries="@array/video_downscale_pref_entries"
        android:entryValues="@array/video_downscale_pref_values" />

    <is.xyz.mpv.preferences.SegmentListPreference
        android:key="video_debanding"
        android:title="@string/pref_video_debanding_title"
        android:summary="@string/pref_video_debanding_summary"
        app:iconSpaceReserved="false"
        android:defaultValue=""
        android:entries="@array/deband_entries"
        android:entryValues="@array/deband_values" />

    <is.xyz.mpv.preferences.InterpolationSegmentPreference
        android:key="video_interpolation_ui"
        android:title="@string/pref_video_interpolation_title"
        android:summary="@string/pref_video_interpolation_message"
        app:iconSpaceReserved="false"
        android:entries="@array/video_interpolation_entries"
        android:entryValues="@array/video_interpolation_values" />

    <is.xyz.mpv.preferences.DropdownListPreference
        android:key="video_tscale"
        android:title="@string/pref_video_tscale_title"
        android:summary="@string/pref_video_tscale_summary"
        app:iconSpaceReserved="false"
        android:defaultValue=""
        android:entries="@array/video_tscale_pref_entries"
        android:entryValues="@array/video_tscale_pref_values" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        app:iconSpaceReserved="false"
        android:key="video_fastdecode"
        android:summary="@string/pref_video_fastdecode_summary"
        android:title="@string/pref_video_fastdecode_title" />

</PreferenceScreen>
